Inside the project
Similar design to the first page, project status, students and groups has different "boxes" in which they are displayed.

Created a clean table design for groups and students.

Now moving to the system part of this page.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,113 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<div id="create-project-form">
+
+<!--
+<div class="simple-box">
   <h3>Create a new project</h3>
   <form action="#" method="POST">
     <input type="email" name="project_name" placeholder="Project name" required/>
     <input type="number" name="number_of_groups" placeholder="Number of groups" required/>
     <input type="number" name="number_of_members" placeholder="Number of members in a group" required/>
     <br>
-    <input type="submit" id="create-project" name="create-project" value="Create project" />
+    <input type="submit" name="create-project" value="Create project" />
   </form>
 </div>
 
-<div id="current-projects">
+<div class="simple-box">
   <h3>Currently active projects</h3>
   
+</div>
+
+-->
+
+<div class="simple-box">
+  <h3>Project status</h3>
+  <div class="simple-box-text">
+    <h5>Name: <b>TEST</b></h5>
+    <h5>Number of groups: <b>TEST</b></h5>
+    <h5>Students per group: <b>TEST</b></h5>
+  </div>
+</div>
+
+
+<div class="simple-box">
+  <h3>Students</h3>
+  <div class="simple-box-text">
+    <table>
+      <thead>
+        <tr>
+          <th>Student</th>
+          <th>Group</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Student1</td>
+          <td>Group1</td>
+          <td>delete</td>
+        </tr>
+        <tr>
+          <td>Student1</td>
+          <td>Group1</td>
+          <td>delete</td>
+        </tr>
+        <tr>
+          <td>Student</td>
+          <td>Group</td>
+          <td>delete</td>
+        </tr>
+      </tbody>
+    </table>
+    <input type="submit" name="add_student" value="Add new Student"/>
+  </div>
+</div>
+
+
+<div class="big-box">
+  <h3>Project groups</h3>
+  <div class="simple-box-text">
+    <table>
+      <thead>
+        <tr>
+          <th>Group #1</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <select name="assign-student">
+              <option selected disabled>Assign student</option>
+              <option value="student1">Student1</option>
+              <option value="student2">Student2</option>
+              <option value="student2">Student2</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <select name="assign-student">
+              <option selected disabled>Assign student</option>
+              <option value="student1">Student1</option>
+              <option value="student2">Student2</option>
+              <option value="student2">Student2</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <select name="assign-student">
+              <option selected disabled>Assign student</option>
+              <option value="student1">Student1</option>
+              <option value="student2">Student2</option>
+              <option value="student2">Student2</option>
+            </select>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    
+    
+  </div>
 </div>
